<resources>
    <string name="app_name">Car Cost Notebook</string>
    <string name="car_brand">Car brand</string>
    <string name="car_brand_title">Car brand<font color="#cc0029">&#42;</font></string>
    <string name="car_model">Car model</string>
    <string name="car_model_title">Car model<font color="#cc0029">&#42;</font></string>
    <string name="car_price_when_bought">Car price when bought</string>
    <string name="car_deleted">Car deleted</string>
    <string name="petrol">Petrol</string>
    <string name="petrol_type">Petrol type</string>
    <string name="petrol_type_title">Petrol type<font color="#cc0029">&#42;</font></string>
    <string name="petrol_unit">Petrol unit</string>
    <string name="petrol_unit_title">Petrol unit<font color="#cc0029">&#42;</font></string>
    <string name="odometer">Odometer</string>
    <string name="odometer_title">Odometer<font color="#cc0029">&#42;</font></string>
    <string name="odometer_unit">Odometer unit</string>
    <string name="odometer_unit_title">Odometer unit<font color="#cc0029">&#42;</font></string>
    <string name="odometer_when_bought">Odometer when bought</string>
    <string name="date_when_bought">Date when bought</string>
    <string name="insert_car_brand">Insert car brand</string>
    <string name="insert_car_model">Insert car model</string>
    <string name="insert_production_year">Insert production year</string>
    <string name="insert_car_mileage">Insert car mileage</string>
    <string name="choose_currency">Choose currency</string>
    <string name="choose_petrol_type">Choose petrol type</string>
    <string name="choose_petrol_unit">Choose petrol unit</string>
    <string name="choose_odometer_unit">Choose odometer unit</string>
    <string name="production_year">Production year</string>
    <string name="production_year_title">Production year<font color="#cc0029">&#42;</font></string>
    <string name="license_plate">License-plate</string>
    <string name="description">Description</string>
    <string name="add_new_car">Add new car</string>
    <string name="edit_car">Edit car</string>
    <string name="no_car_added_yet">No car added yet</string>
    <string name="add">Add</string>
    <string name="petrol_fill">Petrol fill</string>
    <string name="maintenance">Maintenance</string>
    <string name="odometer_reading">Odometer reading</string>
    <string name="odometer_item_value" translatable="false">%1s %2$s</string>
    <string name="petrol_amount" translatable="false">%1$s %2$s</string>
    <string name="petrol_amount_and_price_value">%1$s %2$s price: %3$s %4$s</string>
    <string name="total">Total: %1$s %2$s</string>
    <string name="from_computed">From computer: %1$s %2$s</string>
    <string name="from_last_fill">From last fill: %1$s %2$s</string>
    <string name="distance_driven">Distance driven: %1$s %2$s</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_date_when_bought">Choose date when car was bought</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="add_tank_fill_details">Add tank fill details</string>
    <string name="edit_tank_fill_details">Edit tank fill details</string>
    <string name="add_maintenance_details">Add maintenance details</string>
    <string name="edit_maintenance_details">Edit maintenance details</string>
    <string name="add_odometer_reading">Add odometer reading</string>
    <string name="edit_odometer_reading">Edit odometer reading</string>
    <string name="petrol_quantity">Petrol quantity</string>
    <string name="computer_l_km">Computer l/km</string>
    <string name="petrol_price">Petrol price</string>
    <string name="petrol_station">Petrol station</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="due_date">Due date</string>
    <string name="choose_due_date">Choose due date</string>
    <string name="accept">Accept</string>
    <string name="delete_dialog_title">Delete \"%1$s\"?</string>
    <string name="delete_dialog_tank_fill_title">Delete tank fill?</string>
    <string name="delete_dialog_odometer_title">Delete odometer reading?</string>
    <string name="delete_car_success">Car \"%1$s\" deleted successfully</string>
    <string name="delete_maintenance_success">Maintenance deleted successfully</string>
    <string name="error_during_delete_process">Error occurred during delete process</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cannot_be_undone">This cannot be undone. Are You sure?</string>
    <string name="delete_dialog_message">Do you want to delete this?</string>
    <string name="odometer_deleted">Odometer deleted</string>
    <string name="undo">UNDO</string>
    <string name="odometer_added_correctly">Odometer added correctly</string>
    <string name="maintenance_added_correctly">Maintenance added correctly</string>
    <string name="maintenace_deleted">Maintenance \"%1$s\" deleted</string>
    <string name="tank_fill_added_correctly">Tank fill added correctly</string>
    <string name="tank_fill_deleted">Tank fill deleted</string>
    <string name="distance_from_last_tank_fill">Distance from last tank fill</string>
    <string name="error_getting_car_data">Error getting car data</string>
    <string name="not_added">Not added</string>
    <string name="car_data">Car data</string>
    <string name="car_data_when_bought">Data when car was bought</string>
    <string name="non_editable_data">This data cannot be edited after car is added</string>
    <string name="currency">Currency</string>
    <string name="currency_title">Currency<font color="#cc0029">&#42;</font></string>
    <string name="pln_currency" translatable="false">zł</string>
    <string name="dol_currency" translatable="false">$</string>
    <string name="eur_currency" translatable="false">€</string>
    <string name="pln_currency_extended" translatable="false">Złoty ( zł )</string>
    <string name="dol_currency_extended" translatable="false">Dolar ( $ )</string>
    <string name="eur_currency_extended" translatable="false">Euro ( € )</string>
    <string name="more">More</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="error_occurred_during_import_process">Error occurred during import process</string>
    <string name="error_occurred_during_import_wrong_file">Error occurred during import process, corrupted file or missing content. Please make sure it is correct backup file</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="error_occurred_during_saving_backup">Error occurred during saving backup</string>
    <string name="app_directory_not_found_check_documents_folder_on_device">App directory not found, check Documents folder on device</string>
    <string name="car_database_exported_successfully">Car database exported successfully</string>
    <string name="backup_file_should_end_with_ccn_extension_please_choose_correct_file">Backup file should end with \".ccn\" extension. Please choose correct file</string>
    <string name="wrong_extension_of_file">Wrong extension of file</string>
    <string name="choose_backup_file">Choose backup file</string>
    <string name="no_tank_fill_data_found">No tank fill data found</string>
    <string name="no_maintenance_data_found">No maintenance data found</string>
    <string name="no_odometer_data_found">No odometer data found</string>
    <string name="nothing_to_export">Nothing to export</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="unsaved_data">Unsaved Data</string>
    <string name="do_you_want_to_discard_changes">Do You want to discard changes?</string>
    <string name="tank_fill">Tank fill: %1$s</string>
    <string name="tank_fills">Tank fills</string>
    <string name="enter_petrol_station_name">Enter petrol station name</string>
    <string name="enter_maintenance_name">Enter maintenance name</string>
    <string name="enter_odometer_value">Enter odometer value</string>
    <string name="enter_petrol_price">Enter petrol price</string>
    <string name="enter_petrol_quantity">Enter petrol quantity</string>
</resources>